# HGGD

./: .coveragerc  .dockerignore  .env  .env.test  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  gunicorn.sh  pyproject.toml  requirements.txt
documentation/: Caddyfile  architecture.md  description.json  development_manual.md  docker-compose.caddy.yml  docker-compose.watchtower.yml  graph_description.json  html_example.json  production_server.md  specifications.md  user_manual.md
htmlcov/: d_145eef247bfb46b6_app_py.html  d_145eef247bfb46b6_calculator_py.html  d_145eef247bfb46b6_dataset_py.html  d_145eef247bfb46b6_graph_py.html  d_145eef247bfb46b6_gunicorn_config_py.html  d_145eef247bfb46b6_helper_functions_for_app_py.html  d_145eef247bfb46b6_index_py.html  d_145eef247bfb46b6_oma_testi_index_py.html  d_145eef247bfb46b6_wsgi_py.html  d_145eef247bfb46b6_zip_creator_py.html  d_4e15f00887e9f430_dataset_reader_py.html  d_4e15f00887e9f430_file_utils_py.html  d_4e15f00887e9f430_folder_reader_py.html  d_4e15f00887e9f430_graph_reader_py.html  d_4e15f00887e9f430_log_time_checker_py.html  d_5fff82e951f4e7e5_dataset_py.html  d_5fff82e951f4e7e5_graph_py.html  d_6e81a6212005cb17_console_io_py.html  d_6e81a6212005cb17_folder_reader_mock_py.html  d_6e81a6212005cb17_ui_py.html  d_8a7d38a7997c6566_calculator_py.html  d_8a7d38a7997c6566_dimacs_reader_py.html  d_8a7d38a7997c6566_gfa_reader_py.html  d_8a7d38a7997c6566_graph_creator_py.html  d_8a7d38a7997c6566_graph_reader_py.html  d_8a7d38a7997c6566_read_graphs_py.html  (+11 more)
(+230 files in other folders)
