[tool.poetry]
name = "hggd"
version = "0.1.0"
description = ""
authors = ["Petri <yogho@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.3"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
